roles/webserver/files/rules.v4
# Generated by iptables-save v1.6.0 on Wed Jan 23 21:40:49 2019
*mangle
:PREROUTING ACCEPT [1026:143559]
:INPUT ACCEPT [1026:143559]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [798:125376]
:POSTROUTING ACCEPT [887:143923]
:SSLH - [0:0]
-A OUTPUT -o eth0 -p tcp -m tcp --sport 4443 -j SSLH
-A OUTPUT -o eth0 -p tcp -m tcp --sport 8443 -j SSLH
-A OUTPUT -o tun0 -p tcp -m tcp --sport 4443 -j SSLH
-A OUTPUT -o tun0 -p tcp -m tcp --sport 8443 -j SSLH
-A POSTROUTING -s 127.0.0.0/8 ! -o lo -j DROP
-A SSLH -j MARK --set-xmark 0x1/0xffffffff
-A SSLH -j ACCEPT
COMMIT
# Completed on Wed Jan 23 21:40:49 2019
# Generated by iptables-save v1.6.0 on Wed Jan 23 21:40:49 2019
*raw
:PREROUTING ACCEPT [1030:143803]
:OUTPUT ACCEPT [890:144315]
-A PREROUTING -d 127.0.0.0/8 ! -i lo -j DROP
COMMIT
# Completed on Wed Jan 23 21:40:49 2019
# Generated by iptables-save v1.6.0 on Wed Jan 23 21:40:49 2019
*nat
:PREROUTING ACCEPT [56:7630]
:INPUT ACCEPT [56:7630]
:OUTPUT ACCEPT [197:13266]
:POSTROUTING ACCEPT [197:13266]
-A POSTROUTING -s 10.6.17.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Wed Jan 23 21:40:49 2019
# Generated by iptables-save v1.6.0 on Wed Jan 23 21:40:49 2019
*filter
:INPUT ACCEPT [6600:3338277]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [7190:5457465]
-A INPUT -i tun+ -j ACCEPT
-A FORWARD -i tun+ -j ACCEPT
-A FORWARD -i tun+ -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o tun+ -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed Jan 23 21:40:49 2019
